--- a/res/values-ko/app_profile_strings.xml
+++ b/res/values-ko/app_profile_strings.xml
@@ -8,4 +8,18 @@
     <string name="app_profile_thermal_title">온도 프로파일</string>
     <string name="performance_default">기본값</string>
     <string name="performance_balance">균형</string>
+    <string name="performance_battery">배터리</string>
+    <string name="performance_performance">성능</string>
+    <string name="performance_gaming">게이밍</string>
+    <string name="performance_camera">카메라</string>
+    <string name="thermal_default">기본값</string>
+    <string name="thermal_balance">균형</string>
+    <string name="thermal_performance">성능</string>
+    <string name="thermal_gaming">게이밍</string>
+    <string name="thermal_gaming2">게이밍 2</string>
+    <string name="thermal_camera">카메라</string>
+    <string name="thermal_video">동영상</string>
+    <string name="thermal_cool">시원하게</string>
+    <string name="thermal_incall">통화 중</string>
+    <string name="thermal_vr">VR</string>
 </resources>
