--- a/res/values-ko/master_switch_preference_strings.xml
+++ b/res/values-ko/master_switch_preference_strings.xml
@@ -17,4 +17,6 @@
  * limitations under the License.
  */
 -->
-<resources></resources>
+<resources>
+    <string name="switch_disable_warning_title">경고</string>
+</resources>
