--- a/res/values/app_profile_strings.xml
+++ b/res/values/app_profile_strings.xml
@@ -21,9 +21,10 @@
     <string name="thermal_balance">Balanced</string>
     <string name="thermal_performance">Performance</string>
     <string name="thermal_gaming">Gaming</string>
-    <string name="thermal_gaming2">Gaming 2</string>
+    <string name="thermal_gaming2">Gaming 2 (PUBG HD)</string>
+    <string name="thermal_nolimits">No Limits</string>
+    <string name="thermal_high">High</string>
     <string name="thermal_camera">Camera</string>
-    <string name="thermal_video">Video</string>
     <string name="thermal_reader">Reader</string>
     <string name="thermal_cool">Cool</string>
     <string name="thermal_incall">In Call</string>
