--- a/res/values-zh-rCN/app_profile_strings.xml
+++ b/res/values-zh-rCN/app_profile_strings.xml
@@ -5,6 +5,7 @@
     <string name="app_profile_restricted_title">限制号码</string>
     <string name="app_profile_restricted_summary">在后台限制此应用</string>
     <string name="app_profile_performance_title">性能配置文件</string>
+    <string name="app_profile_thermal_title">Thermal 配置</string>
     <string name="performance_default">默认</string>
     <string name="performance_balance">平衡</string>
     <string name="performance_battery">电池</string>
@@ -16,9 +17,7 @@
     <string name="thermal_balance">平衡</string>
     <string name="thermal_performance">性能模式</string>
     <string name="thermal_gaming">游戏</string>
-    <string name="thermal_gaming2">游戏2</string>
     <string name="thermal_camera">相机</string>
-    <string name="thermal_video">视频</string>
     <string name="thermal_reader">Reader</string>
     <string name="thermal_cool">Cool</string>
     <string name="thermal_incall">正在通话</string>
