crowdin: import translation
Change-Id: I8fd5aed0acf57355ae6cfbcd28339192344e15d9

--- a/res/values-ru/system_extensions_strings.xml
+++ b/res/values-ru/system_extensions_strings.xml
@@ -37,6 +37,8 @@
     <string name="baikal_lid_sensor_enabled_summary">Включить обработку умного чехла</string>
     <string name="baikal_lid_sensor_reverse_title">Инвертировать Умный чехол</string>
     <string name="baikal_lid_sensor_reverse_summary">Инвертировать поведение умного чехла</string>
+    <string name="baikal_lid_ignore_wake_title">Игнорировать пробуждения</string>
+    <string name="baikal_lid_ignore_wake_summary">Игнорировать случайные пробуждения когда Умный Чехол закрыт</string>
     <string name="use_google_sans_title">Google Sans по умолчанию</string>
     <string name="use_google_sans_summary">Использовать Google Sans как шрифт по умолчанию. Требуется перезагрузка!</string>
 </resources>
