--- a/res/values-ru/app_profile_strings.xml
+++ b/res/values-ru/app_profile_strings.xml
@@ -6,6 +6,7 @@
     <string name="app_profile_restricted_summary">Ограничить приложение в фоновом режиме</string>
     <string name="app_profile_performance_title">Профиль производительности</string>
     <string name="app_profile_thermal_title">Профиль температурного режима</string>
+    <string name="app_profile_brightness_title">Яркость экрана</string>
     <string name="performance_default">По умолчанию</string>
     <string name="performance_balance">Сбалансированный</string>
     <string name="performance_battery">Батарея</string>
@@ -17,9 +18,24 @@
     <string name="thermal_balance">Сбалансированный</string>
     <string name="thermal_performance">Производительность</string>
     <string name="thermal_gaming">Игровой</string>
+    <string name="thermal_gaming2">Игровой 2 (PUBG HD)</string>
+    <string name="thermal_nolimits">Без ограничений (85гр)</string>
+    <string name="thermal_high">Высокий</string>
     <string name="thermal_camera">Камера</string>
     <string name="thermal_reader">Читалка</string>
     <string name="thermal_cool">Холодный</string>
     <string name="thermal_incall">В режиме разговора</string>
     <string name="thermal_vr">VR</string>
+    <string name="brightness_default">По умолчанию</string>
+    <string name="brightness_reduced">Уменьшенная Авто</string>
+    <string name="brightness_full">Полная</string>
+    <string name="brightness_10">10\%</string>
+    <string name="brightness_20">20\%</string>
+    <string name="brightness_30">30\%</string>
+    <string name="brightness_40">40\%</string>
+    <string name="brightness_50">50\%</string>
+    <string name="brightness_60">60\%</string>
+    <string name="brightness_70">70\%</string>
+    <string name="brightness_80">80\%</string>
+    <string name="brightness_90">90\%</string>
 </resources>
