--- a/res/values-zh-rCN/app_profile_strings.xml
+++ b/res/values-zh-rCN/app_profile_strings.xml
@@ -6,6 +6,7 @@
     <string name="app_profile_restricted_summary">在后台限制此应用</string>
     <string name="app_profile_performance_title">性能配置文件</string>
     <string name="app_profile_thermal_title">Thermal 配置</string>
+    <string name="app_profile_brightness_title">屏幕亮度</string>
     <string name="performance_default">默认</string>
     <string name="performance_balance">平衡</string>
     <string name="performance_battery">电池</string>
@@ -17,9 +18,24 @@
     <string name="thermal_balance">平衡</string>
     <string name="thermal_performance">性能模式</string>
     <string name="thermal_gaming">游戏</string>
+    <string name="thermal_gaming2">游戏2 (绝地求生 高清)</string>
+    <string name="thermal_nolimits">无限制</string>
+    <string name="thermal_high">高</string>
     <string name="thermal_camera">相机</string>
     <string name="thermal_reader">Reader</string>
     <string name="thermal_cool">Cool</string>
     <string name="thermal_incall">正在通话</string>
     <string name="thermal_vr">VR</string>
+    <string name="brightness_default">默认</string>
+    <string name="brightness_reduced">自动减少</string>
+    <string name="brightness_full">Full</string>
+    <string name="brightness_10">10%</string>
+    <string name="brightness_20">20%</string>
+    <string name="brightness_30">30%</string>
+    <string name="brightness_40">40%</string>
+    <string name="brightness_50">50%</string>
+    <string name="brightness_60">60%</string>
+    <string name="brightness_70">70%</string>
+    <string name="brightness_80">80%</string>
+    <string name="brightness_90">90%</string>
 </resources>
