--- a/res/xml/power_save.xml
+++ b/res/xml/power_save.xml
@@ -83,6 +83,13 @@
         android:defaultValue="false"
         android:disableDependentsState="true" />
 
+    <ru.baikalos.gear.preference.GlobalSettingSwitchPreference
+        android:key="baikal_extreme_saver_enabled"
+        android:title="@string/baikal_extreme_saver_enabled_enabled_title"
+        android:summary="@string/baikal_extreme_saver_enabled_enabled_summary"
+        android:defaultValue="false"
+        android:disableDependentsState="true" />
+
     <Preference android:title="@string/prefs_battery_saver_title" 
 		    android:summary="@string/prefs_battery_saver_summary">
 	    <intent android:action="android.settings.IGNORE_BATTERY_OPTIMIZATION_SETTINGS"/>
