--- a/res/values/app_profile_strings.xml
+++ b/res/values/app_profile_strings.xml
@@ -48,4 +48,10 @@
     <string name="brightness_80">80\%</string>
     <string name="brightness_90">90\%</string>
 
+    <string name="app_profile_pinned_title">Pinned</string>
+    <string name="app_profile_pinned_summary">Do not close on memory management</string>
+
+    <string name="app_profile_disable_twl_title">Disable temp whitelisting</string>
+    <string name="app_profile_disable_twl_summary">Disable temp whitelisting on incoming notifications</string>
+
 </resources>
