--- a/res/xml/app_profile.xml
+++ b/res/xml/app_profile.xml
@@ -49,6 +49,18 @@
             android:summary="%s" />
 
         <SwitchPreference
+            android:key="app_profile_pinned"
+            android:title="@string/app_profile_pinned_title"
+            android:summary="@string/app_profile_pinned_summary"
+            android:defaultValue="false" />
+
+        <SwitchPreference
+            android:key="app_profile_disable_twl"
+            android:title="@string/app_profile_disable_twl_title"
+            android:summary="@string/app_profile_disable_twl_summary"
+            android:defaultValue="false" />
+
+        <SwitchPreference
             android:key="app_profile_camera_hal1"
             android:title="@string/app_profile_camera_hal1_title"
             android:summary="@string/app_profile_camera_hal1_summary"
