--- a/res/values-ru/app_profile_strings.xml
+++ b/res/values-ru/app_profile_strings.xml
@@ -41,4 +41,8 @@
     <string name="brightness_70">70\%</string>
     <string name="brightness_80">80\%</string>
     <string name="brightness_90">90\%</string>
+    <string name="app_profile_pinned_title">Закрепить</string>
+    <string name="app_profile_pinned_summary">Менеджер памяти не будет закрывать приложение по неактивности</string>
+    <string name="app_profile_disable_twl_title">Отключить временный белый список</string>
+    <string name="app_profile_disable_twl_summary">Не помещать приложение в белый список по получению уведомлений для экономии энергии.</string>
 </resources>
