Make core_ctl optional [1/1]
Change-Id: I260fb8830aade716c1f56a7815a7e11d22aa6e39

--- a/res/values/power_save_strings.xml
+++ b/res/values/power_save_strings.xml
@@ -29,5 +29,8 @@
     <string name="powersave_hide_idle_summary">Hide Idle state from Google Play Services. Could fix notification problems. Increases battery drain! </string>
     <string name="powersave_unrestricted_network_title">Unrestricted Network</string>
     <string name="powersave_unrestricted_network_summary">Do not restrict network access in Idle state. Could fix notification problems. Increases battery drain!</string>
-    
+
+    <string name="powersave_core_ctl_enable_title">Enable Core Control</string>
+    <string name="powersave_core_ctl_enable_summary">Enable selective CPU core offlining for better power saving</string>
+   
 </resources>
