--- a/res/values/system_extensions_strings.xml
+++ b/res/values/system_extensions_strings.xml
@@ -51,4 +51,5 @@
     <string name="proximity_on_wake_title">Check on Wake</string>
     <string name="proximity_on_wake_summary">Do not wake up if proximity sensor is covered</string>
 
+    <string name="smart_cover_category">Smart Cover</string>
 </resources>
