--- a/res/xml/lockscreen.xml
+++ b/res/xml/lockscreen.xml
@@ -44,6 +44,14 @@
             android:summary="@string/fp_unlock_keystore_summary"
             android:defaultValue="false" />
 
+        <ru.baikalos.gear.preference.SecureSettingSwitchPreference
+            android:key="smartlock_lid_unlock"
+            android:title="@string/smartlock_lid_unlock_title"
+            android:summary="@string/smartlock_lid_unlock_summary"
+            android:defaultValue="false" />
+
+
+
     </PreferenceCategory>
 
 </PreferenceScreen>
