--- a/res/values-ru/power_save_strings.xml
+++ b/res/values-ru/power_save_strings.xml
@@ -6,25 +6,17 @@
     <string name="powersave_summary">Энергосбережение</string>
     <string name="device_idle_aggressive_title">Агрессивный сон</string>
     <string name="device_idle_aggressive_summary">Переходить в режим сна через 1 минуту после отключения экрана. Игнорировать движение.</string>
-    <string name="powersave_wl_block_title">Блокировка вейклоков</string>
-    <string name="powersave_wl_block_summary">Блокировать вейклоки от пользовательских приложений, кроме белого списка.</string>
-    <string name="powersave_throttle_alarms_title">Уменьшать пробуждения</string>
-    <string name="powersave_throttle_alarms_summary">Уменьшить количество пробуждений.</string>
-    <string name="powersave_restrict_screen_on_enabled_title">Ограничения при включенном экране</string>
-    <string name="powersave_restrict_screen_on_enabled_summary">Применять ограничения приложений при включенном экране</string>
     <string name="baikal_extreme_saver_enabled_enabled_title">Экстремальное энергосбережение</string>
-    <string name="baikal_extreme_saver_enabled_enabled_summary">Использовать экстремальные настройки в режиме сохранения энергии (Battery Saver)</string>
-    <!-- Batery whitelist -->
-    <string name="prefs_battery_saver_title">Белый список</string>
-    <string name="prefs_battery_saver_summary">Белый список</string>
-    <!-- App ops -->
-    <string name="prefs_app_options_title">Настройки приложений</string>
-    <string name="prefs_app_options_summary">Настройки приложений</string>
+    <string name="baikal_extreme_saver_enabled_enabled_summary">Использовать оптимизации для носимых устройств</string>
+
     <string name="default_profiles_title">Профили по умолчанию</string>
     <string name="powersave_hide_idle_title">Скрывать СОН от GMS</string>
     <string name="powersave_hide_idle_summary">Скрывать режим глубокого сна от Google Play Services. Помогает от некоторых проблем с уведомлениями в сне. Увеличивает потребление батареи!</string>
-    <string name="powersave_unrestricted_network_title">Но ограничивать сеть</string>
+    <string name="powersave_unrestricted_network_title">Не ограничивать сеть</string>
     <string name="powersave_unrestricted_network_summary">Не ограничивать доступ приложений к сети в режиме сна. Помогает решить проблемы с уведомлениями и повышенным потреблением энергии некоторыми приложениями.</string>
-    <string name="powersave_core_ctl_enable_title">Управление ядрами ЦПУ</string>
-    <string name="powersave_core_ctl_enable_summary">Включить автоматическое управление отключением ядер ЦПУ для оптимизации энергопотребления</string>
+
+    <!-- Batery whitelist -->
+    <string name="prefs_battery_saver_title">Белый список</string>
+    <string name="prefs_battery_saver_summary">Белый список</string>
+
 </resources>
